--- a/my-app/src/css/AutoSuggest.css
+++ b/my-app/src/css/AutoSuggest.css
@@ -30,6 +30,12 @@
     margin-bottom: 40px;
 }
 
+.hiddenCheckboxes {
+    opacity: 0.9;
+    border-radius : 35px;
+
+}
+
 
 @keyframes fadeInAnimation {
     0% {
@@ -59,3 +65,83 @@
 }
 
 /* @import '~bootstrap/scss/bootstrap.scss'; */
+
+.checkBoxContainer {
+    display: block;
+    position: relative;
+    padding: 5px 0px 5px 35px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-size: 22px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    animation: fadeInAnimation 1s linear;
+    background-color: #c7c7c7 !important;
+    color: #5c5c5c !important;
+    border-radius:  35px;
+  }
+
+
+/* Hide the browser's default checkbox */
+.checkBoxContainer input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+  }
+
+  
+  /* Create a custom checkbox */
+  .checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    /* background-color: rgb(150, 150, 150); */
+    border-radius: 50px;
+  }
+  
+  /* On mouse-over, add a grey background color */
+  .checkBoxContainer:hover input ~ .checkmark {
+    background-color: rgb(150, 150, 150);
+  }
+  
+  /* When the checkbox is checked, add a blue background */
+  .checkBoxContainer input:checked ~ .checkmark {
+    background-color: #45535e;
+  }
+
+    /* When the checkbox is checked, add a blue background */
+    .checkBoxContainer input:checked {
+        background-color: #1e6194;
+      }
+  
+  /* Create the checkmark/indicator (hidden when not checked) */
+  .checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+  }
+  
+  /* Show the checkmark when checked */
+  .checkBoxContainer input:checked ~ .checkmark:after {
+    display: block;
+  }
+  
+  /* Style the checkmark/indicator */
+  .checkBoxContainer .checkmark:after {
+    left: 9px;
+    background-color: #1e6194;
+    top: 5px;
+    width: 5px;
+    height: 10px;
+    border: solid white;
+    border-width: 0 3px 3px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
